# eGet-Crawler-for-Overflow

./: .coveragerc  .dockerignore  .flake8  =4.2.0  Dockerfile  MANIFEST.in  actor.json  extend_eget_context.md  input_schema.json  main.py  package-lock.json  pyproject.toml  pytest.ini  readme.md  readme_add_new_campaign.md  readme_joseph.md  requirements-dev.txt  requirements.txt  run.py  run_crawler.py  scraper.patch  scraper1  setup.cfg  test_scrape.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
api/v1/endpoints/: chunker.py  converter.py  crawler.py  scraper.py
configs/: mock_campaign.yaml  selectors.yaml
core/: config.py  exceptions.py  logging.py
docs/: docs.md
models/: __init__.py  chunk_response.py  crawler_request.py  crawler_response.py  file_conversion_models.py  lead.py  lead_factory.py  request.py
scripts/: check_browser_pool.py
services/cache/: cache_service.py
services/chunker/: chunk_service.py  semantic_chunker.py
services/converters/: base_converter.py  conversion_service.py  converter_factory.py  document_structure.py
services/crawler/: browser_pool.py  config_loader.py  content_extractor.py  crawler_service.py  link_extractor.py  list_page_crawler.py  profile_extractor.py  queue_manager.py  schemas.py
services/extractors/: structured_data.py  validators.py
services/scraper/: scraper.py
tests/: _debug_path.py  test_config_loader.py  test_lead_additional.py  test_lead_model.py  test_lead_model.py.bak
tmp/mock_site/: index.html  profile_1.html  profile_2.html
(+3 files in other folders)
