# setup.cfg  (minimal but complete)
[metadata]
name = eget-crawler
version = 0.0.0
description = eGet Crawler – demo repo
author = Joseph Arnold
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jarnold84/eGet-Crawler-for-Overflow

[options]
packages = find:
python_requires = >=3.11
include_package_data = true          # <-- tells setuptools to read MANIFEST.in